--- a/css/PTstyle.css
+++ b/css/PTstyle.css
@@ -143,6 +143,51 @@ header {
   margin-right: 50px;
 }
 
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(18, 1fr); /* 18 equal-width columns */
+  grid-gap: 8px;
+}
+
+.row {
+    margin-bottom: 10px;
+}
+
+#mobile-notice {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.9);
+    color: white;
+
+    font-size: var(--fs-4xl);
+    font-family: var(--abhaya);
+    text-align: center;
+    padding-top: 25%;
+    z-index: 9999;
+}
+
+@media (max-width: 1700px) {
+    #mobile-notice {
+        display: block;
+    }
+
+    #main-content {
+        display: none;
+    }
+}
+@media (min-width: 400px) and (max-width: 800px) { 
+  #mobile-notice {
+    font-size: var(--fs-3xl);
+    padding-top: 50%;
+    padding-left: 7%;
+    padding-right: 7%;
+  }
+}
+
 
 .PT-title {
     font-size: var(--fs-4xl);
